testsuite/tests/typecheck/should_fail/T18252a.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE TypeOperators #-}
module T18252a where

import Data.Type.Equality
import GHC.TypeNats

eq :: (a ~ b ~ c) :~: ()
eq = Refl
